# tiny-llm

./: .gitignore  README.md  pyproject.toml
docs-site/: README.md  pnpm-lock.yaml
docs-site/app/: layout.tsx
docs-site/app/(home)/: page.tsx
docs-site/content/docs/: data.mdx  evaluation.mdx  getting-started.mdx  index.mdx  inference.mdx  meta.json
docs-site/content/docs/api/: config.mdx  data.mdx  index.mdx  meta.json  model.mdx  muon.mdx  sample-and-eval.mdx  tokenizer.mdx  train.mdx
docs-site/content/docs/architecture/: attention.mdx  embeddings-and-init.mdx  index.mdx  meta.json  rmsnorm.mdx  rope.mdx  swiglu.mdx
docs-site/content/docs/runbooks/: cloud-pretrain.mdx  custom-dataset.mdx  first-run.mdx  local-full-train.mdx  local-smoke.mdx  meta.json
docs-site/content/docs/tokenizer/: format-and-fast-path.mdx  index.mdx  meta.json  training.mdx
docs-site/content/docs/training/: checkpointing.mdx  distributed.mdx  index.mdx  (+2 more)
docs-site/lib/: shared.ts
docs/superpowers/plans/: 2026-07-17-tiny-llm.md  2026-07-17-tiny-lm.md
docs/superpowers/specs/: 2026-07-17-tiny-llm-500m-design.md  2026-07-17-tiny-lm-500m-design.md  smoke-results.md
scripts/: cloud_setup.sh  prepare_data.py  train_tokenizer.py
tests/: test_config.py  test_data.py  test_eval.py  test_model.py  test_muon.py  test_scripts.py  test_tokenizer.py  test_train.py
tinyllm/: __init__.py  config.py  data.py  eval_hellaswag.py  model.py  muon.py  sample.py  tokenizer.py  train.py
tinylm/: __init__.py  data.py  eval_hellaswag.py  model.py  sample.py  train.py
tokenizer/: tokenizer.json
