[project]
name = "tiny-lm"
version = "0.1.0"
description = "A ~500M-parameter LLM pretrained from scratch"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "numpy>=2.0",
    "regex>=2024.4.16",
    "datasets>=3.0",
    "tokenizers>=0.20",
    "tqdm>=4.66",
]

[project.optional-dependencies]
wandb = ["wandb>=0.18"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinylm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
